--- a/index.html
+++ b/index.html
@@ -1,1 +1,92 @@
-<h1>ddfsdfsdf</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Свадебный стилист и визажист</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
+    <script src="main.js"></script>
+</head>
+<body>
+    <header id="main-header">
+        <div class="container">
+        <h1>
+            <span class="center">
+                <span class="first">Свадебный стилист и визажист</span>
+                <span class="second">Tyt bydet logo</span>
+                <span class="third">+79788188913</span>
+            </span>
+        </h1>
+        </div> 
+    </header>
+    <nav id="navbar">
+        <div class="container">
+            <li><a href="#">Обо мне</a></li>
+            <li><a href="#">Портфолио</a></li>
+            <li><a href="#">Прочие услуги</a></li>
+            <li><a href="#">Мои дипломы</a></li>
+            <li><a href="#">Отзывы </a></li>
+            <li><a href="#">Контакты</a></li>
+        </div>
+    </nav>
+
+    <section id="about-me">
+        <div class="container">
+            <h1>
+                    <p>Профессиональный</p>
+                    <p>свадебный стилист</p>
+                    <p>и визажист</p>
+                    <p>в Севастополе и Крыму</p>
+                    <p>Огромный опыт в создании свадебных и вечерних образов</p>
+                    <p>Современные техники создания причесок и макияжа</p>
+            </h1>
+        </div>
+    </section>
+    <section id="portfolio">
+            <div class="container">
+                <h1>
+                        Мои невесты
+                        Вечерние образы и для фото
+                </h1>
+            </div>
+        </section>
+
+        <section id="else">
+                <div class="container">
+                    <h1>
+                            Ламинирование ресниц
+                            Окрашивание бровей хной и краской
+                            Окрашивание ресниц
+                    </h1>
+                </div>
+        </section>
+
+        <section id="diploma">
+                <div class="container">
+                    <h1>
+                            diploma
+                    </h1>
+                </div>
+        </section>
+
+        <section id="feedback">
+                <div class="container">
+                    <h1>
+                            feedback
+                    </h1>
+                </div>
+        </section>
+
+        <section id="contacts">
+                <div class="container">
+                    <h1>
+                            +79788188913
+                    </h1>
+                </div>
+        </section>
+    <footer id="main-footer">
+        <p> Copyright &copy; 2019 Anton Kuzmin</p>
+    </footer>
+
+</body>
+</html>
