--- a/index.html
+++ b/index.html
@@ -32,14 +32,21 @@
 
     <section id="about-me">
         <div class="container">
-            <h1>
-                    <p>Профессиональный</p>
-                    <p>свадебный стилист</p>
-                    <p>и визажист</p>
-                    <p>в Севастополе и Крыму</p>
-                    <p>Огромный опыт в создании свадебных и вечерних образов</p>
-                    <p>Современные техники создания причесок и макияжа</p>
-            </h1>
+            
+            <p class="title">Профессиональный</p>
+            <p class="title">свадебный стилист</p>
+            <p class="title">и визажист</p>
+            <p class="title">в Севастополе и Крыму</p>
+            <ul>
+                <li class="bullet">
+                    Огромный опыт в создании свадебных и вечерних образов
+                </li >
+                 <li class="bullet">
+                    Современные техники создания причесок и макияжа
+                </li>
+            </ul>
+            <button class="button-about-me">Узнать больше</button>
+        
         </div>
     </section>
     <section id="portfolio">
