--- a/index.html
+++ b/index.html
@@ -51,20 +51,33 @@
     </section>
     <section id="portfolio">
             <div class="container">
-                <h1>
-                        Мои невесты
-                        Вечерние образы и для фото
-                </h1>
+                <p class="title" id="porfolio">Портфолио</p>
+                <p class="title" id="porfolio">Мои невесты</p>
+                <img class="photo" src="./images/bride1.jpg" width="300px">
+                <img class="photo" src="./images/bride2.jpg" width="300px">
+                <img class="photo" src="./images/bride3.jpg" width="300px">
+                <p class="title" id="porfolio">Вечерние образы и для фото</p>
+                <img class="photo" src="./images/bride1.jpg" width="300px">
+                <img class="photo" src="./images/bride2.jpg" width="300px">
+                <img class="photo" src="./images/bride3.jpg" width="300px">
             </div>
         </section>
 
         <section id="else">
                 <div class="container">
-                    <h1>
-                            Ламинирование ресниц
-                            Окрашивание бровей хной и краской
-                            Окрашивание ресниц
-                    </h1>
+                    <p class="title-else" id="porfolio">Прочие услуги</p>
+                    <figure class="sign">
+                        <img class="photo" src="./images/bride1.jpg" width="300px">
+                        <figcaption>ЛАМИНИРОВАНИЕ РЕСНИЦ</figcaption>
+                    </figure>
+                    <figure class="sign">
+                            <img class="photo" src="./images/bride1.jpg" width="300px">
+                            <figcaption>ЛАМИНИРОВАНИЕ РЕСНИЦ</figcaption>
+                    </figure>
+                    <figure class="sign">
+                            <img class="photo" src="./images/bride1.jpg" width="300px">
+                            <figcaption>ЛАМИНИРОВАНИЕ РЕСНИЦ</figcaption>
+                    </figure>
                 </div>
         </section>
 
