--- a/index.html
+++ b/index.html
@@ -66,18 +66,20 @@
         <section id="else">
                 <div class="container">
                     <p class="title-else" id="porfolio">Прочие услуги</p>
-                    <figure class="sign">
-                        <img class="photo" src="./images/bride1.jpg" width="300px">
-                        <figcaption>ЛАМИНИРОВАНИЕ РЕСНИЦ</figcaption>
-                    </figure>
-                    <figure class="sign">
+                    <div class="list-else">
+                        <figure class="sign">
                             <img class="photo" src="./images/bride1.jpg" width="300px">
                             <figcaption>ЛАМИНИРОВАНИЕ РЕСНИЦ</figcaption>
-                    </figure>
-                    <figure class="sign">
+                        </figure>
+                        <figure class="sign">
                             <img class="photo" src="./images/bride1.jpg" width="300px">
-                            <figcaption>ЛАМИНИРОВАНИЕ РЕСНИЦ</figcaption>
-                    </figure>
+                            <figcaption>ОКРАШИВАНИЕ БРОВЕЙ ХНОЙ И КРАСКОЙ</figcaption>
+                        </figure>
+                        <figure class="sign">
+                            <img class="photo" src="./images/bride1.jpg" width="300px">
+                            <figcaption>ОКРАШИВАНИЕ РЕСНИЦ</figcaption>
+                        </figure>
+                    </div>
                 </div>
         </section>
 
