--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <h1>
             <span class="center">
                 <span class="first">Свадебный стилист и визажист</span>
-                <span class="second">Tyt bydet logo</span>
+                <span class="second">
+                    <img src="images/logo.png" alt="logo">
+                </span>
                 <span class="third">+79788188913</span>
             </span>
         </h1>
@@ -53,20 +55,24 @@
             <div class="container">
                 <p class="title" id="porfolio">Портфолио</p>
                 <p class="title" id="porfolio">Мои невесты</p>
-                <img class="photo" src="./images/bride1.jpg" width="300px">
-                <img class="photo" src="./images/bride2.jpg" width="300px">
-                <img class="photo" src="./images/bride3.jpg" width="300px">
+            <div class="e">
+                <img class="photo" src="./images/bride1.jpg" height="300px">
+                <img class="photo" src="./images/bride2.jpg" height="300px">
+                <img class="photo" src="./images/bride3.jpg" height="300px">
+            </div>
                 <p class="title" id="porfolio">Вечерние образы и для фото</p>
-                <img class="photo" src="./images/bride1.jpg" width="300px">
-                <img class="photo" src="./images/bride2.jpg" width="300px">
-                <img class="photo" src="./images/bride3.jpg" width="300px">
+            <div class="e">
+                <img class="photo" src="./images/bride1.jpg" height="300px">
+                <img class="photo" src="./images/bride2.jpg" height="300px">
+                <img class="photo" src="./images/bride3.jpg" height="300px">
+            </div>   
             </div>
         </section>
 
         <section id="else">
                 <div class="container">
                     <p class="title-else" id="porfolio">Прочие услуги</p>
-                    <div class="list-else">
+                    <div class="e">
                         <figure class="sign">
                             <img class="photo" src="./images/bride1.jpg" width="300px">
                             <figcaption>ЛАМИНИРОВАНИЕ РЕСНИЦ</figcaption>
@@ -83,29 +89,35 @@
                 </div>
         </section>
 
-        <section id="diploma">
+        <!-- <section id="diploma">
                 <div class="container">
                     <h1>
                             diploma
                     </h1>
                 </div>
-        </section>
+        </section> -->
 
         <section id="feedback">
                 <div class="container">
-                    <h1>
-                            feedback
+                    <h1 class="title">
+                         Получить консультацию прямо сейчас   
                     </h1>
+                    <div>
+                        <input type="tel" placeholder="Телефон">
+                        <input type="text" placeholder="Введите Ваше имя">
+                        <button class="button-about-me">Позвоните мне</button>
+
+                    </div>
                 </div>
         </section>
 
-        <section id="contacts">
+        <!-- <section id="contacts">
                 <div class="container">
                     <h1>
                             +79788188913
                     </h1>
                 </div>
-        </section>
+        </section> -->
     <footer id="main-footer">
         <p> Copyright &copy; 2019 Anton Kuzmin</p>
     </footer>
