--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
     <nav id="navbar">
         <div class="container">
             <div class="e">
-            <li><a href="#">Обо мне</a></li>
-            <li><a href="#">Портфолио</a></li>
-            <li><a href="#">Прочие услуги</a></li>
-            <li><a href="#">Мои дипломы</a></li>
-            <li><a href="#">Отзывы </a></li>
-            <li><a href="#">Контакты</a></li>
+            <li><a href="#about-me">Обо мне</a></li>
+            <li><a href="#portfolio">Портфолио</a></li>
+            <li><a href="#else">Прочие услуги</a></li>
+            <li><a href="#diploma">Мои дипломы</a></li>
+            <li><a href="#comment">Отзывы </a></li>
+            <li><a href="#feedback">Контакты</a></li>
             </div>
         </div>
     </nav>
 
-    <section id="about-me">
+    <section id="about-me"> 
         <div class="container">
             
             <p class="title">Профессиональный</p>
@@ -96,19 +96,22 @@
                 </div>
         </section>
 
-        <!-- <section id="diploma">
+        <section id="diploma">
                 <div class="container">
-                    <h1>
-                            diploma
-                    </h1>
+                        <p class="title" id="porfolio">Мои дипломы</p>
+                        <div class="e">
+                            <img class="photo" src="./images/bride1.jpg" height="300px">
+                            <img class="photo" src="./images/bride2.jpg" height="300px">
+                            <img class="photo" src="./images/bride3.jpg" height="300px">
+                        </div>
                 </div>
-        </section> -->
+        </section>
 
         <section id="feedback">
                 <div class="container">
-                    <h1 class="title">
+                    <p class="title">
                          Получить консультацию прямо сейчас   
-                    </h1>
+                    </p>
                     <div>
                         <input type="tel" id="phone" placeholder="Телефон" pattern="^((8|\+7)[\- ]?)?(\(?\d{3}\)?[\- ]?)?[\d\- ]{7,10}$">
                         <input type="text" placeholder="Введите Ваше имя">
@@ -118,16 +121,28 @@
                 </div>
         </section>
 
-        <!-- <section id="contacts">
+        <section id="comment">
                 <div class="container">
-                    <h1>
-                            +79788188913
-                    </h1>
+                    <p class="title">
+                        Отзывы  
+                    </p>
+                    <div class="one-comment">
+                        <div>Света</div>
+                        <div><p> Хочу выразить огромную благодарность, самому прекрасному визажисту Ольге Тавлуй!!! Результаты макияжа и прически сделанные ею, радовали не только меня, но и окружающих! Спасибо огромное, за то, что в день моей свадьбы, подчеркнула мою красоту. Мне было очень приятно с тобой работать! Всем рекомендую этого мастера!))) Оля, ты, СУПЕР! Фото выложу позже, т.к. еще не готовы!</p></div>
+                    </div>
+                    <div class="one-comment">
+                            <div>Света</div>
+                            <div><p> Хочу выразить огромную благодарность, самому прекрасному визажисту Ольге Тавлуй!!! Результаты макияжа и прически сделанные ею, радовали не только меня, но и окружающих! Спасибо огромное, за то, что в день моей свадьбы, подчеркнула мою красоту. Мне было очень приятно с тобой работать! Всем рекомендую этого мастера!))) Оля, ты, СУПЕР! Фото выложу позже, т.к. еще не готовы!</p></div>
+                    </div>
+                    <div class="one-comment">
+                            <div>Света</div>
+                            <div><p> Хочу выразить огромную благодарность, самому прекрасному визажисту Ольге Тавлуй!!! Результаты макияжа и прически сделанные ею, радовали не только меня, но и окружающих! Спасибо огромное, за то, что в день моей свадьбы, подчеркнула мою красоту. Мне было очень приятно с тобой работать! Всем рекомендую этого мастера!))) Оля, ты, СУПЕР! Фото выложу позже, т.к. еще не готовы!</p></div>
+                    </div>
                 </div>
-        </section> -->
+        </section> 
     <footer id="main-footer">
         <p> Copyright &copy; 2019 Anton Kuzmin</p>
     </footer>
-
+<!-- <script src="https://mssg.me/widget/syltan.89" async></script> -->
 </body>
 </html>
