--- a/index.html
+++ b/index.html
@@ -100,22 +100,22 @@
                 <div class="container">
                         <p class="title" id="porfolio">Мои дипломы</p>
                         <div class="e">
-                            <img class="photo" src="./images/bride1.jpg" height="300px">
-                            <img class="photo" src="./images/bride2.jpg" height="300px">
-                            <img class="photo" src="./images/bride3.jpg" height="300px">
+                            <img class="photo big" src="./images/diplom.jpg">
+                            <img class="photo big" src="./images/diplom.jpg">
+                            <img class="photo big" src="./images/diplom.jpg">
                         </div>
                 </div>
         </section>
 
         <section id="feedback">
                 <div class="container">
-                    <p class="title">
+                    <p class="title-else">
                          Получить консультацию прямо сейчас   
                     </p>
                     <div>
                         <input type="tel" id="phone" placeholder="Телефон" pattern="^((8|\+7)[\- ]?)?(\(?\d{3}\)?[\- ]?)?[\d\- ]{7,10}$">
                         <input type="text" placeholder="Введите Ваше имя">
-                        <button class="button-about-me">Позвоните мне</button>
+                        <button class="button-about-me" onclick='location.href="#feedback"'>Позвоните мне</button>
 
                     </div>
                 </div>
