--- a/index.html
+++ b/index.html
@@ -13,35 +13,28 @@
 <body>
     <header id="main-header">
         <div class="container">
-        <h1>
-            <span class="center">
-                <div class="e">
-                <div class="first"><p>Свадебный стилист и визажист</p></div>
-                <div class="second">
-                    <img src="images/logo.png" alt="logo">
-                </div>
-                <div class="third"><p>+79788188913</p></div>
-                </div>
-            </span>
-        </h1>
+            <div class="e">
+                <p>Свадебный стилист ивизажист</p>
+                <img src="images/logo.png" alt="logo">
+                <p>+79788188913</p>
+            </div>
         </div> 
     </header>
     <nav id="navbar">
         <div class="container">
             <div class="e">
-            <li><a href="#about-me">Обо мне</a></li>
-            <li><a href="#portfolio">Портфолио</a></li>
-            <li><a href="#else">Прочие услуги</a></li>
-            <li><a href="#diploma">Мои дипломы</a></li>
-            <li><a href="#comment">Отзывы </a></li>
-            <li><a href="#feedback">Контакты</a></li>
+                <li><a href="#about-me">Обо мне</a></li>
+                <li><a href="#portfolio">Портфолио</a></li>
+                <li><a href="#else">Прочие услуги</a></li>
+                <li><a href="#diploma">Мои дипломы</a></li>
+                <li><a href="#comment">Отзывы </a></li>
+                <li><a href="#feedback">Контакты</a></li>
             </div>
         </div>
     </nav>
 
     <section id="about-me"> 
         <div class="container">
-            
             <p class="title">Профессиональный</p>
             <p class="title">свадебный стилист</p>
             <p class="title">и визажист</p>
@@ -55,24 +48,24 @@
                 </li>
             </ul>
             <button class="button-about-me">Узнать больше</button>
-        
         </div>
     </section>
+
     <section id="portfolio">
             <div class="container">
                 <p class="title" id="porfolio">Портфолио</p>
                 <p class="title" id="porfolio">Мои невесты</p>
-            <div class="e">
-                <img class="photo" src="./images/bride1.jpg" height="300px">
-                <img class="photo" src="./images/bride2.jpg" height="300px">
-                <img class="photo" src="./images/bride3.jpg" height="300px">
-            </div>
+                <div class="e">
+                    <img class="photo" src="./images/bride1.jpg" height="300px">
+                    <img class="photo" src="./images/bride2.jpg" height="300px">
+                    <img class="photo" src="./images/bride3.jpg" height="300px">
+                </div>
                 <p class="title" id="porfolio">Вечерние образы и для фото</p>
-            <div class="e">
-                <img class="photo" src="./images/bride1.jpg" height="300px">
-                <img class="photo" src="./images/bride2.jpg" height="300px">
-                <img class="photo" src="./images/bride3.jpg" height="300px">
-            </div>   
+                <div class="e">
+                    <img class="photo" src="./images/bride1.jpg" height="300px">
+                    <img class="photo" src="./images/bride2.jpg" height="300px">
+                    <img class="photo" src="./images/bride3.jpg" height="300px">
+                </div>   
             </div>
         </section>
 
@@ -98,12 +91,12 @@
 
         <section id="diploma">
                 <div class="container">
-                        <p class="title" id="porfolio">Мои дипломы</p>
-                        <div class="e">
-                            <img class="photo big" src="./images/diplom.jpg">
-                            <img class="photo big" src="./images/diplom.jpg">
-                            <img class="photo big" src="./images/diplom.jpg">
-                        </div>
+                    <p class="title" id="porfolio">Мои дипломы</p>
+                    <div class="e">
+                        <img class="photo big" src="./images/diplom.jpg">
+                        <img class="photo big" src="./images/diplom.jpg">
+                        <img class="photo big" src="./images/diplom.jpg">
+                    </div>
                 </div>
         </section>
 
@@ -116,7 +109,6 @@
                         <input type="tel" id="phone" placeholder="Телефон" pattern="^((8|\+7)[\- ]?)?(\(?\d{3}\)?[\- ]?)?[\d\- ]{7,10}$">
                         <input type="text" placeholder="Введите Ваше имя">
                         <button class="button-about-me" onclick='location.href="#feedback"'>Позвоните мне</button>
-
                     </div>
                 </div>
         </section>
