--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
                     <p class="title-else">
                          Получить консультацию прямо сейчас   
                     </p>
-                    <div>
+                    <form id="form">
                         <input type="tel" id="phone" placeholder="Телефон" pattern="^((8|\+7)[\- ]?)?(\(?\d{3}\)?[\- ]?)?[\d\- ]{7,10}$">
                         <input type="text" placeholder="Введите Ваше имя">
-                        <button class="button-about-me" onclick='location.href="#feedback"'>Позвоните мне</button>
-                    </div>
+                        <button type="submit" class="button-about-me">Позвоните мне</button>
+                    </form>
                 </div>
         </section>
 
