--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </p>
                     <form id="form">
                         <input type="tel" id="phone" placeholder="Телефон" pattern="^((8|\+7)[\- ]?)?(\(?\d{3}\)?[\- ]?)?[\d\- ]{7,10}$">
-                        <input type="text" placeholder="Введите Ваше имя">
+                        <input type="text" id="messege" placeholder="Введите Ваше имя">
                         <button type="submit" class="button-about-me">Позвоните мне</button>
                     </form>
                 </div>
