--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                          Получить консультацию прямо сейчас   
                     </p>
                     <form id="form">
-                        <input type="tel" id="phone" placeholder="Телефон" pattern="^((8|\+7)[\- ]?)?(\(?\d{3}\)?[\- ]?)?[\d\- ]{7,10}$">
+                        <input type="tel" id="phone" placeholder="Телефон" >
                         <input type="text" id="messege" placeholder="Введите Ваше имя">
                         <button type="submit" class="button-about-me">Позвоните мне</button>
                     </form>
