--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
                 <p class="title" id="porfolio">Портфолио</p>
                 <p class="title" id="porfolio">Мои невесты</p>
                 <div class="e">
-                    <img class="photo" src="./images/bride1.jpg" height="300px">
-                    <img class="photo" src="./images/bride2.jpg" height="300px">
-                    <img class="photo" src="./images/bride3.jpg" height="300px">
+                    <img class="photo" src="./image/new/bride2.jpg" height="500px">
+                    <img class="photo" src="./image/new/bride3.jpg" height="500px">
+                    <img class="photo" src="./image/new/bride1.jpg" height="500px">
                 </div>
                 <p class="title" id="porfolio">Вечерние образы и для фото</p>
                 <div class="e">
-                    <img class="photo" src="./images/bride1.jpg" height="300px">
-                    <img class="photo" src="./images/bride2.jpg" height="300px">
-                    <img class="photo" src="./images/bride3.jpg" height="300px">
+                    <img class="photo" src="./image/new/obr1.jpg" height="500px">
+                    <img class="photo" src="./image/new/obr2.jpg" height="500px">
+                    <img class="photo" src="./image/new/obr3.jpg" height="500px">
                 </div>   
             </div>
         </section>
@@ -73,15 +73,15 @@
                     <p class="title-else" id="porfolio">Прочие услуги</p>
                     <div class="e">
                         <figure class="sign">
-                            <img class="photo" src="./images/bride1.jpg" width="300px">
+                            <img class="photo" src="./image/new/obr4.jpg" width="300px">
                             <figcaption>ЛАМИНИРОВАНИЕ РЕСНИЦ</figcaption>
                         </figure>
                         <figure class="sign">
-                            <img class="photo" src="./images/bride1.jpg" width="300px">
+                            <img class="photo" src="./image/new/obr5.jpg" width="300px">
                             <figcaption>ОКРАШИВАНИЕ БРОВЕЙ ХНОЙ И КРАСКОЙ</figcaption>
                         </figure>
                         <figure class="sign">
-                            <img class="photo" src="./images/bride1.jpg" width="300px">
+                            <img class="photo" src="./image/new/obr6.jpg" width="300px">
                             <figcaption>ОКРАШИВАНИЕ РЕСНИЦ</figcaption>
                         </figure>
                     </div>
@@ -92,9 +92,9 @@
                 <div class="container">
                     <p class="title" id="porfolio">Мои дипломы</p>
                     <div class="e">
-                        <img class="photo big" src="./images/diplom.jpg">
-                        <img class="photo big" src="./images/diplom.jpg">
-                        <img class="photo big" src="./images/diplom.jpg">
+                        <img class="photo big" src="./image/new/dip1.jpg">
+                        <img class="photo big" src="./image/new/dip2.jpg">
+                        <img class="photo big" src="./image/new/dip3.jpg">
                     </div>
                 </div>
         </section>
@@ -118,16 +118,20 @@
                         Отзывы  
                     </p>
                     <div class="one-comment">
-                        <div>Света</div>
+                        <div>Катя</div>
                         <div><p> Хочу выразить огромную благодарность, самому прекрасному визажисту Ольге Тавлуй!!! Результаты макияжа и прически сделанные ею, радовали не только меня, но и окружающих! Спасибо огромное, за то, что в день моей свадьбы, подчеркнула мою красоту. Мне было очень приятно с тобой работать! Всем рекомендую этого мастера!))) Оля, ты, СУПЕР! Фото выложу позже, т.к. еще не готовы!</p></div>
                     </div>
                     <div class="one-comment">
-                            <div>Света</div>
-                            <div><p> Хочу выразить огромную благодарность, самому прекрасному визажисту Ольге Тавлуй!!! Результаты макияжа и прически сделанные ею, радовали не только меня, но и окружающих! Спасибо огромное, за то, что в день моей свадьбы, подчеркнула мою красоту. Мне было очень приятно с тобой работать! Всем рекомендую этого мастера!))) Оля, ты, СУПЕР! Фото выложу позже, т.к. еще не готовы!</p></div>
+                            <div>Людила</div>
+                            <div><p> Спасибо огромное за макияж и прическу. С моим небольшим генетическим богатством волос было нелегко справится,но Вы сделали невозможное! Прическа шикарная продержалась целый день,а макияж не испортился даже в ответственные моменты,когда катились слёзы. Вы большая умничка,и в восторге остались не только я,мои гости,но и фотограф,которая специально для Вас сделала несколько кадров. Сброшу,когда будут готовы </p></div>
                     </div>
                     <div class="one-comment">
                             <div>Света</div>
-                            <div><p> Хочу выразить огромную благодарность, самому прекрасному визажисту Ольге Тавлуй!!! Результаты макияжа и прически сделанные ею, радовали не только меня, но и окружающих! Спасибо огромное, за то, что в день моей свадьбы, подчеркнула мою красоту. Мне было очень приятно с тобой работать! Всем рекомендую этого мастера!))) Оля, ты, СУПЕР! Фото выложу позже, т.к. еще не готовы!</p></div>
+                            <div><p> Олечка, с Вами было потрясающе просто и легко работать! Прическа и макияж продержались целый день. Не смотря на безумный ветер в Балаклаве, ни одна прядь не выбилась из прически. Причёска красивая, цены доступные... Локоны до сих пор держатся, не смотря на то что пошли вторые сутки с завивки)))
+                                Огромное спасибо за позитив на весь день! 
+                                За лёгкость в общении, ощущение, что знакомы минимум пару лет))))
+                                Ваша работа доставляет Вам удовольствие и это заметно!
+                                Оль, побольше благодарных клиентов, творческого вдохновения. И пусть Ваш позитив и дальше радует нас, клиентов!</p></div>
                     </div>
                 </div>
         </section> 
