--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <script src="lib/jquery.maskedinput.js" type="text/javascript"></script>
 </head>
 <body>
-    <header id="main-header">
+        <header id="main-header">
+
         <div class="container">
             <div class="e">
                 <p>Свадебный стилист ивизажист</p>
-                <img src="images/logo.png" alt="logo">
+                <a href='http://olgatavluy.ru/'><img src="images/logo.png" alt="logo"></a>
                 <p>+79788188913</p>
             </div>
         </div> 
@@ -27,7 +28,7 @@
                 <li><a href="#else">Прочие услуги</a></li>
                 <li><a href="#diploma">Мои дипломы</a></li>
                 <li><a href="#comment">Отзывы </a></li>
-                <li><a href="#feedback">Контакты</a></li>
+                <li><a href="#contact">Контакты</a></li>
             </div>
         </div>
     </nav>
@@ -126,7 +127,7 @@
                             <div><p> Спасибо огромное за макияж и прическу. С моим небольшим генетическим богатством волос было нелегко справится,но Вы сделали невозможное! Прическа шикарная продержалась целый день,а макияж не испортился даже в ответственные моменты,когда катились слёзы. Вы большая умничка,и в восторге остались не только я,мои гости,но и фотограф,которая специально для Вас сделала несколько кадров. Сброшу,когда будут готовы </p></div>
                     </div>
                     <div class="one-comment">
-                            <div>Света</div>
+                            <div >Света</div>
                             <div><p> Олечка, с Вами было потрясающе просто и легко работать! Прическа и макияж продержались целый день. Не смотря на безумный ветер в Балаклаве, ни одна прядь не выбилась из прически. Причёска красивая, цены доступные... Локоны до сих пор держатся, не смотря на то что пошли вторые сутки с завивки)))
                                 Огромное спасибо за позитив на весь день! 
                                 За лёгкость в общении, ощущение, что знакомы минимум пару лет))))
@@ -135,7 +136,28 @@
                     </div>
                 </div>
         </section> 
+        <section id="contact">
+            <div class="container">
+                
+                <div class="e">
+                        <img class="photo" src="./images/olga_tavluy.jpg">
+                        <p class="word"><span class="first_letter">Связаться со мной можно любым удобным способом для Вас:</span>
+                            <br>
+                            <br><span class="other_letter">Контактный телефон: </span><a href="https://vk.com/muah_olga_tavluy">+79788188913</a>
+                            <br><span class="other_letter">WhatApp: </span><a href="https://vk.com/muah_olga_tavluy">+79788188913</a> 
+                            <br><span class="other_letter">E-mail: </span><a href="https://vk.com/muah_olga_tavluy">olgatavluy@gmail.com</a>
+                            <br><span class="other_letter">Написать В Контакте: </span><a href="https://vk.com/muah_olga_tavluy">muah_olga_tavluy</a>
+                            <br><span class="other_letter">Написать в Instogram: </span><a href="https://www.instagram.com/olga_tavluy/">olga_tavluy</a>
+                        </p>
+
+                            
+                    </div>
+
+            </div>
+        </section>
     <footer id="main-footer">
+        <a href="https://www.instagram.com/olga_tavluy/"><img src="images/instagram_PNG18.png" alt="alt" width="50px"></a>
+        <a href="https://vk.com/muah_olga_tavluy"><img src="images/vkontakte_PNG25.png" alt="alt" width="50px"></a>
         <p> Copyright &copy; 2019 Anton Kuzmin</p>
     </footer>
     <script src="js/common.js"></script>
