--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
     <section id="about-me"> 
         <div class="container">
-            <p class="title">Профессиональный</p>
-            <p class="title">свадебный стилист</p>
-            <p class="title">и визажист</p>
-            <p class="title">в Севастополе и Крыму</p>
+            <p class="title-am">Профессиональный</p>
+            <p class="title-am">свадебный стилист</p>
+            <p class="title-am">и визажист</p>
+            <p class="title-am">в Севастополе и Крыму</p>
             <ul>
                 <li class="bullet">
                     Огромный опыт в создании свадебных и вечерних образов
@@ -138,7 +138,7 @@
         </section> 
         <section id="contact">
             <div class="container">
-                
+                    <p class="title" id="porfolio">Контакты</p>
                 <div class="e">
                         <img class="photo" src="./images/olga_tavluy.jpg">
                         <p class="word"><span class="first_letter">Связаться со мной можно любым удобным способом для Вас:</span>
