--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
     <script src="lib/jquery-3.3.1.min.js" type="text/javascript"></script>
+    <link rel="icon" type="image/png" sizes="192x192"  href="image/favicon/android-icon-144x144.png">
 
     <script src="lib/jquery.maskedinput.js" type="text/javascript"></script>
 </head>
@@ -14,7 +15,7 @@
 
         <div class="container">
             <div class="e">
-                <p>Свадебный стилист ивизажист</p>
+                <p>Свадебный стилист и визажист</p>
                 <a href='http://olgatavluy.ru/'><img src="images/logo.png" alt="logo"></a>
                 <p>+79788188913</p>
             </div>
