--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     Современные техники создания причесок и макияжа
                 </li>
             </ul>
-            <button class="button-about-me">Узнать больше</button>
+           <a href="#contact"><button class="button-about-me">Узнать больше</button></a>
         </div>
     </section>
 
