--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                             <br><span class="other_letter">WhatApp: </span><a href="https://vk.com/muah_olga_tavluy">+79788188913</a> 
                             <br><span class="other_letter">E-mail: </span><a href="https://vk.com/muah_olga_tavluy">olgatavluy@gmail.com</a>
                             <br><span class="other_letter">Написать В Контакте: </span><a href="https://vk.com/muah_olga_tavluy">muah_olga_tavluy</a>
-                            <br><span class="other_letter">Написать в Instogram: </span><a href="https://www.instagram.com/olga_tavluy/">olga_tavluy</a>
+                            <br><span class="other_letter">Написать в Instagram: </span><a href="https://www.instagram.com/olga_tavluy/">olga_tavluy</a>
                         </p>
 
                             
