css container and hidden:box

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </section>
 
         <section id="diploma">
-                <div class="container">
+                <div class=".container-diploma">
                     <p class="title" id="porfolio">Мои дипломы</p>
                     <div class="e">
                         <img class="photo big" src="./image/new/dip1.jpg">
